--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ footer{
 /*---------------------------------------------------------------------*/
 
 /*media*/
-@media only screen and (min-width: 768px and max-width: 922px){
+@media screen and (max-width: 922px){
 /*navbar*/
 body{
     overflow-x: hidden;
