--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ footer{
 /*---------------------------------------------------------------------*/
 
 /*media*/
-@media screen and (max-width: 922px){
+@media only screen and (max-width: 1000px){
 /*navbar*/
 body{
     overflow-x: hidden;
